--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,5 @@
 server:
   port: 80
-
-
 spring:
   datasource:
     username: root
@@ -9,9 +7,8 @@ spring:
     url: jdbc:mysql://localhost:3306/reptile?useUnicode=true&characterEncoding=utf-8
     driver-class-name: com.mysql.jdbc.Driver
 #    driver-class-name: com.mysql.jdbc.Driver
-
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 logging:
   level:
-    root: INFO
+    root: debug
