修改了订单的类型

--- a/orderType_mapper.json
+++ b/orderType_mapper.json
@@ -1,9 +1,38 @@
 {
   "1": {
-    "name": "家电维修",
+    "name": "家电清洗",
     "code": "165063"
   },
   "2": {
-
+    "name": "安装",
+    "code": "165064"
+  },
+  "3": {
+    "name": "维修",
+    "code": "165065"
+  },
+  "4": {
+    "name": "除虫灭蟑",
+    "code": "165067"
+  },
+  "5": {
+    "name": "保洁",
+    "code": "165068"
+  },
+  "6": {
+    "name": "空气治理",
+    "code": "165071"
+  },
+  "7": {
+    "name": "消毒",
+    "code": "165072"
+  },
+  "8": {
+    "name": "衣物洗护",
+    "code": "165074"
+  },
+  "9": {
+    "name": "空调维保",
+    "code": "165077"
   }
 }
