--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,13 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/reptile?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/reptile?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
     driver-class-name: com.mysql.jdbc.Driver
 #    driver-class-name: com.mysql.jdbc.Driver
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 logging:
   level:
-    root: debug
+    root: info
+
+config-path: D:/projs/order/configs
