--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.ang</groupId>
     <artifactId>reptile</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>reptile</name>
+    <name>movers</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
