已经可以自动登录实现创建帮家订单了

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ login-checker:
     login:
       params:
         username: LJJ0001
-        passworld: 123456
+        password: 123456
       login-url: http://wangdian.bangjia.me/index.php/Public/login.html
     key-worlds:
       url: http://wangdian.bangjia.me/index.php/Ucenter/index.html
